--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html,body{
+	height: 100%;
+}
 *{margin: 0;
 padding: 0;
 font-family: sans-serif;}
@@ -7,27 +10,28 @@ font-family: sans-serif;}
 }
 h1 {
 	text-align: center;
-	font-size: 5vw;
+	font-size: 4vw;
 	font-family: sans-serif;
-	padding-top: 5vw;
 	color: red;
 }
 .top-bar {
 
 	
-	background-color: black;
+	background-color: rgba(0,0,0,0.4);
 	display: flex;
 	width: 100%;
 	height: auto;
 	position: fixed;
+	z-index: 1000;
+
 	
 }
 
 .logo {
 	color: #fff;
 	flex: 1;
-	font-size: 3vw;
-	padding: 2vw;
+	font-size: 2vw;
+	padding: 1vw;
 	
 }
 .menu {
@@ -38,7 +42,7 @@ h1 {
 	
 	display: flex;
 	list-style: none;
-	margin-top: 2.2vw;
+	margin-top: 1vw;
 	flex-flow: row wrap;
 }
 .menu ul li {
@@ -47,7 +51,7 @@ h1 {
 }
 .menu ul li a {
 	color: #fff;
-	font-size: 2.45vw;
+	font-size: 1.5vw;
 	text-decoration: none;
 }
 .menu  ul li a:hover {
@@ -57,47 +61,55 @@ h1 {
 	background-color: grey;
 }
 /*hero */
-.hero {
-	
-	background-image: url(../images/carry.jpg);
-	width: 100%;
-	background-size: 100% 100%;
-}
-.hero-text {
-	display: flex;
-	padding: 15% 0;
-}
-.hero-text-items {
-	color: red;
-	margin: auto;
-	padding-top: 20%;
-	
-	text-align: center;
-	width: 50%;
-} 
-.hero-text-items h1 {
-	font-size: 3.5vw;
-	margin-bottom: 2vw;
-	text-transform: uppercase;
-}
-.hero-text-items p {
-	font-size: 2vw;
-	margin-bottom: 2vw;
-}
-.hero-text-items a {
-	background-color: #000;
-	color: #fff;
-	text-decoration: none;
-	text-transform: uppercase;
+/* The hero image */
+.hero-image {
+    /* Use "linear-gradient" to add a darken background effect to the image . This will make the text easier to read */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/carry.jpg");
 
+    /* Set a specific height */
+    height: 80%;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
+
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 1.5vw;
+}
+.hero-text h1 {
+	padding-bottom: 1vh;
+}
+.hero-text p {
+	padding-bottom: 1vh;
+}
+.hero-text button {
+	color: white;
+	background: black;
+	border-color: black;
+}
+
+
+
 
 /*column*/
 .main-content {
+
 	
 	display: flex;
 	flex-flow: row wrap;
 	padding: 5% 0;
+	justify-content: flex-start;
+	box-sizing: border-box;
 } 
 .main1{
 	
@@ -105,15 +117,20 @@ h1 {
 	padding: 3%;
 	text-align: center;
 	align-items: center;
+	box-sizing: border-box;
+}
+.main1 p {
+	text-align: left;
+
 }
 /*.main1 p {
 	font-family: 'Dancing Script', cursive;
 	font-size: 2.5vw;
 }*/
 .alll p{
-	font-family: 'Dancing Script', cursive;
+	
 	font-size: 2.5vw;
-	text-align: center;
+	
 
 }
 .alll a{
@@ -169,6 +186,12 @@ h1 {
 	font-size: 2vw;
 	color: #fff;
 	background-color: #000;
+}
+#padsections{
+	padding-top: 1vh;
+}
+.resizeimage {
+	
 }
 /*footer*/
 /*.low-bar {
@@ -245,6 +268,9 @@ width: 100%;
 	height: 60vh;
 }
 }*/
+#left {
+	text-align: left;
+}
 .footer{
 	display: flex;
 	background-color: black;
@@ -255,6 +281,7 @@ width: 100%;
 	color: #808080;
 	padding: 10px;
 	box-sizing: border-box;
+	align-items: center;
 	text-align: center;
 	border-right: 2px solid rgba(105,105,105,0.2);
 }
@@ -262,8 +289,7 @@ width: 100%;
 	color: #a2a2a2;
 	text-decoration: none;
 	text-align: center;
-	text-align: center;
-}
+	}
 
 .footer-box2{
 	flex: 3;
@@ -284,11 +310,17 @@ width: 100%;
 }
 
 .footer-box3{
-	flex: 2;
+	flex: 3;
 	color: #808080;
 	padding: 10px;
 	box-sizing: border-box;
 	text-align: center;
+}
+.footer-box3 h3 {
+	padding-bottom: 1vw;
+}
+.footer-box3 a {
+	text-decoration: none;
 }
 /*@media screen and (max-width:700px)  {
 	.footer{
@@ -319,7 +351,19 @@ box-sizing: border-box;
 		text-align: center;
 	}		
 }*/
-@media screen and (max-width: 400px){
+#mid {
+	text-align: center;
+}
+@media screen and (max-width: 600px){
+	.resizeimage {
+		height: 50vw;
+		width: 70vw;
+	}
+
+}
+	
+
+@media screen and (max-width: 980px){
 	.top-bar{
 		flex-direction: column;
 		text-align: center;
@@ -331,6 +375,7 @@ box-sizing: border-box;
 	footer {
 		flex-direction: column;
 		text-align: center;
+		font-size: 2vw;
 	}
 	.menu ul li{
 		padding: 0.3vw;
