--- a/css/style.css
+++ b/css/style.css
@@ -153,9 +153,11 @@ h1 {
 	flex-direction: column;
 }
 #contact{
-	background: url(../images/klore.jpg) no-repeat;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/klore.jpg");
 	padding: 5vw 0;
 	background-size: 100% 100%;
+	justify-content: center;
+	align-items: center;
 	
 }
 .contact-items h2 {
