--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h1 {
 .top-bar {
 
 	
-	background-color: rgba(0,0,0,0.4);
+	background-color: black;
 	display: flex;
 	width: 100%;
 	height: auto;
@@ -79,12 +79,13 @@ h1 {
 /* Place text in the middle of the image */
 .hero-text {
     text-align: center;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
     font-size: 1.5vw;
+    padding-top: 10%;
 }
 .hero-text h1 {
 	padding-bottom: 1vh;
@@ -92,10 +93,13 @@ h1 {
 .hero-text p {
 	padding-bottom: 1vh;
 }
-.hero-text button {
+.hero-text a{
 	color: white;
 	background: black;
 	border-color: black;
+	font-size: 2vw;
+	text-decoration: none;
+	box-shadow: 0.5vw 1vh red;
 }
 
 
@@ -184,15 +188,16 @@ h1 {
 }
 .contact-items a{
 	text-decoration: none;
-	font-size: 1.5vw;
+	font-size: 3vw;
 	color: #fff;
 	background-color: #000;
+	box-shadow: 0.5vw 1vh red;
 }
 #padcontents{
 	padding-top: 1vh;
 }
 .resizeimage {
-	
+	width: 24vw;
 }
 /*footer*/
 /*.low-bar {
@@ -355,16 +360,11 @@ box-sizing: border-box;
 #mid {
 	text-align: center;
 }
-@media screen and (max-width: 600px){
-	.resizeimage {
-		height: 50vw;
-		width: 70vw;
-	}
 
-}
+
 	
 
-@media screen and (max-width: 980px){
+@media screen and (max-width: 716px){
 	.top-bar{
 		flex-direction: column;
 		text-align: center;
@@ -410,4 +410,46 @@ box-sizing: border-box;
 	height: 60vh;
 }
 }
+@media screen and (max-width: 640px){
+	.resizeimage {
+		height: 50vw;
+		width: 70vw;
+	}
+
+}
+@media screen and (max-width: 640px){
+	.logo {
+		font-size: 4vw;
+	}
+	.menu ul li a{
+		font-size: 3vw;
+	}
+	.hero-text p{
+		font-size: 3vw;
+	}
+	.hero-text a{
+		font-size: 3vw;
+	}
+	.resizeimage {
+		width: 80vw;
+		height: 60vw;
+	}
+	footer h2,h3 {
+		font-size: 4vw;
+	}
+	.footer-box1 a{
+		font-size: 3vw;
+	}
+	.footer-box3 a{
+		height: 3vw;
+		width: 3vw;
+	}
+	.contact-items input[type="text"]{
+		height: 4vh;
+		width: 40%;
+
+	}
+
+}
+
 	
